Two things: - Marked endpoints with wrong HTTP method as deprecated - Replaced all synchronous filesystem calls with async counterparts
Also, removed the examples as we're good to go soon.
