# server/api/controllers/examples/router.js
@@ -1,8 +1,0 @@
-import * as express from "express";
-import controller from "./controller";
-
-export default express
-  .Router()
-  .post("/", controller.create)
-  .get("/", controller.all)
-  .get("/:id", controller.byId);
