# server/api/controllers/informative/router.js
@@ -3,9 +3,11 @@ import controller from "./controller";
 
 export default express
   .Router()
-  .post("/create", controller.create)
-  .get("/load/:name", controller.getByName)
-  .post("/save/:name", controller.saveByName)
+  .post("/create", controller.create) // FIXME: Remove POST
+  .put("/create", controller.create) // PUT is correct here, as this operation is idempotent
   .delete("/delete/:name", controller.deleteByName)
   .get("/list", controller.list)
-  .get("/list/:name", controller.list); // FIXME: For now, the name paramter is ignored - should list only documents connected to specified map
+  .get("/list/:name", controller.list) // FIXME: For now, the name paramter is ignored - should list only documents connected to specified map
+  .get("/load/:name", controller.getByName)
+  .post("/save/:name", controller.saveByName) // FIXME: Remove POST
+  .put("/save/:name", controller.saveByName); // PUT is correct here, as this operation is idempotent
